[package]
name = "bkfw"
version = "0.1.0"
edition = "2021"
authors = ["Yang Chen <y.chen-14@tudelft.nl>"]
description = "A Rust backend for BK7084."
readme = "README.md"

[lib]
name = "bkfw"
crate-type = ["cdylib", "lib"]

[dependencies]
arrayvec = "0.7"
bytemuck = "1"
cfg-if = "1"
crossbeam-channel = "0.5"
dolly = { git = "https://github.com/matthiascy/dolly.git", branch = "main" }
env_logger = "0.10"
glam = "0.24"
legion = { git = "https://github.com/matthiascy/legion.git", branch = "master" }
log = "0.4"
pollster = "0.3"
pyo3 = { version = "0.20", features = ["extension-module"] }
profiling = "1.0"
range-alloc = "0.1"
rustc-hash = "1"
static_assertions = "1"
smartstring = "1"
winit = "0.28"
wgpu = "0.18"

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
