[package]
name = "bkfw"
version = "0.1.0"
edition = "2021"
authors = ["Yang Chen <y.chen-14@tudelft.nl>"]
description = "A Rust backend for BK7084."
readme = "README.md"

[lib]
name = "bkfw"
crate-type = ["cdylib", "lib"]


[dependencies]
arrayvec = "0.7"
bytemuck = {  version = "1", features = ["derive"] }
cfg-if = "1"
crossbeam-channel = "0.5"
env_logger = "0.10"
image = "0.24"
glam = {  version = "0.24", features = ["bytecheck"] }
legion = { git = "https://github.com/matthiascy/legion.git", branch = "master" }
log = "0.4"
numpy = "0.20"
pollster = "0.3"
pyo3 = { version = "0.20", features = ["extension-module", "generate-import-lib"] }
profiling = "1.0"
range-alloc = "0.1"
rustc-hash = "1"
static_assertions = "1"
smartstring = "1"
tobj = { git = "https://github.com/matthiascy/tobj.git", branch = "master" }
winit = "0.28"
wgpu = "0.18"

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
