[project]
name = "bk7084"
version = '0.3.9'
description = "Python framework for BK7084 Computational Simulations"
license = { file = "LICENSE" }
keywords = ["bk7084", "computational", "simulations", "python", "graphics"]
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Yang Chen", email = "matthiasychen@gmail.com" },
    { name = "Ruben Wiersma", email = "rubenwiersma@gmail.com" },
    { name = "Ricardo Marroquim", email = "R.Marroquim@tudelft.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
]

[project.urls]
homepage = "https://github.com/bk7084/framework"
repository = "https://github.com/bk7084/framework"
bugtracker = "https://github.com/bk7084/framework/issues"
changelog = "https://github.com/bk7084/framework/blob/master/CHANGELOG.md"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "pypkg"
module-name = "bk7084.bkfw"
features = ["pyo3/extension-module"]
bindings = "pyo3"
compatibility = "linux"

[options]
zip_safe = true
include_package_data = true

[options.package_data]
bk7084 = ['assets/models/*', 'assets/shaders/*', 'assets/textures/*']
